# ProjectTemplate2

./: .all-contributorsrc  .appveyor.yml  .buildinfo  .gitattributes  .gitconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  annotated.html  class_complex-members.html  class_complex.html  class_foo.html  classes.html  complex_8hpp.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  files.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: cpp_doxygen_sphinx.doctree  index.doctree
.githooks/: pre-commit
.github/workflows/: Docs.yml  Linux-Clang.yml  Linux-GCC.yml  Windows-MSVC.yml  Windows-MinGW.yml  build_cmake.yml  clang-format.yml  macOS.yml
_sources/api/: cpp_doxygen_sphinx.rst.txt
api/: cpp_doxygen_sphinx.html  index.html
apps/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Doxyfile.in  README.md.in  conf.py  conf.py.in  index.rst
include/: Complex.hpp
libs/: CMakeLists.txt  complex.cpp  complex.hpp
search/: all_0.js  all_1.js  classes_0.js  classes_1.js  files_0.js  searchdata.js
src/: Complex.cpp
tests/: CMakeLists.txt  complex_main.cpp
